# Homework14

./: README.md  pyproject.toml
src/: 14.2_main.py  15.1_main.py  Category.py  Product.py  category.py  main.py  product.py
tests/: category_test.py  conftest.py  product_test.py  tests.py
